# wanAspects

./: .gitignore  .gitlab-ci.yml  .public-release-include  AGENTS.md  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml
docs/: CONTRIBUTING.md  README.md  architecture-overview.md  configuration.md  telemetry-101.md  troubleshooting.md  user-guide.md  using-wanaspects.md
examples/: README.md  materialize_demo.py  telemetry_demo.py
src/wanaspects/: __init__.py  context.py  diag.py  guards.py  manager.py  optimized_manager.py  telemetry.py
src/wanaspects/aspects/: __init__.py  conditional_context.py  context.py  contract.py  logging.py  logging_extensions.py  metrics.py  sampled_metrics.py  smart_logging.py  tracing.py
src/wanaspects/config/: __init__.py  rotation.py
src/wanaspects/core/: __init__.py  aspect.py  context.py
src/wanaspects/filters/: __init__.py  redaction.py
src/wanaspects/formatters/: __init__.py  unicode_safe.py
tests/: conftest.py
tests/aspects/: test_context_propagation.py  test_contract.py  test_logging.py  test_logging_extensions.py  test_metrics.py  test_metrics_export.py  test_no_collect_guard.py  test_tracing.py
tests/config/: test_rotation.py
tests/filters/: test_redaction.py
tests/formatters/: test_unicode_safe.py
tests/integration/: test_file_exporters.py  test_perf_budget.py
tests/unit/: test_config.py  test_context.py  test_logs_bridge.py  test_manager.py  test_telemetry.py
